--- a/package.json
+++ b/package.json
@@ -3,18 +3,52 @@
   "version": "1.0.0",
   "description": "A simple RESTful API",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "PORT=8081 node --watch index.js"
+    "dev": "NODE_ENV=development ts-node-dev --project ./tsconfig.json --respawn --transpile-only src/index.ts",
+    "build": "tsc && tsc-alias",
+    "start": "NODE_ENV=local node dist/index.js",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
+    "migration:generate": "NODE_ENV=development ts-node-dev ./node_modules/typeorm/cli -- migration:create",
+    "migration:run": "NODE_ENV=development ts-node-dev -r dotenv/config ./node_modules/typeorm/cli.js migration:run -d ./src/infra/database/MysqlConfig.ts",
+    "migration:rollback": "NODE_ENV=development ts-node-dev -r dotenv/config ./node_modules/typeorm/cli.js migration:revert -d ./src/infra/database/MysqlConfig.ts",
+    "seed:generate": "ts-node-dev ./node_modules/typeorm-extension/bin/cli.cjs seed:create -n ",
+    "seed:run": "ts-node ./src/database/seeds/seeder.ts"
   },
   "author": "josealejandror28@gmail.com",
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.678.0",
     "@hono/node-server": "^1.13.2",
+    "@hono/zod-validator": "^0.4.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "hono": "^4.6.6",
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
+    "path-to-regexp": "^8.2.0",
+    "reflect-metadata": "^0.2.2",
+    "tsconfig-paths": "^4.2.0",
+    "tsyringe": "^4.8.0",
+    "typeorm": "^0.3.20",
+    "typeorm-extension": "^3.6.2",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.25.8",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.25.7",
+    "@babel/plugin-syntax-decorators": "^7.25.7",
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-typescript": "^7.25.7",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.8.1",
+    "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.10",
+    "typescript": "^5.6.3"
+  },
+  "_moduleAliases": {
+    "@/*": "./dist/*"
   }
 }
