--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "hono": "^4.6.6",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^3.0.0",
     "mysql": "^2.18.1",
     "path-to-regexp": "^8.2.0",
     "reflect-metadata": "^0.2.2",
@@ -43,12 +44,17 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/mime": "^4.0.0",
     "@types/node": "^22.8.1",
+    "@types/uuid": "^10.0.0",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.10",
     "typescript": "^5.6.3"
   },
   "_moduleAliases": {
     "@/*": "./dist/*"
+  },
+  "resolutions": {
+    "@types/mime": "3.0.4"
   }
 }
