feat: adding Swagger documentation, CacheControl Middleware

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ HOST=http://localhost:8787
 API_GATEWAY=http://localhost:8787/api
 
 JWT_SECRET_KEY=123456
+JWT_TOKEN_TIMEOUT=7200
+
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=
@@ -11,4 +13,9 @@ DB_PASSWORD=
 DB_DATABASE=employee-management
 DB_LOG=false
 
-SERVER_ORIGINS=false
+TEMP_FOLDER=.
+SERVER_ORIGINS=http://client-host:3000/
+SERVER_CORS_ORIGIN_ACTIVE=true
+
+AWS_LAMBDA_RESIZER_URL=http://lambda-api.amazon.com
+API_GATEWAY=http://localhost:8787/api
