--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development ts-node-dev --project ./tsconfig.json --respawn --transpile-only src/index.ts",
-    "build": "tsc && tsc-alias && node builder.js",
+    "build": "tsc && tsc-alias node && node builder.js",
     "start": "NODE_ENV=local node dist/index.js",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
     "migration:generate": "NODE_ENV=development ts-node-dev ./node_modules/typeorm/cli -- migration:create",
@@ -19,8 +19,10 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.678.0",
     "@hono/node-server": "^1.13.2",
+    "@hono/swagger-ui": "^0.4.1",
     "@hono/zod-validator": "^0.4.1",
     "@types/mime": "^3.0.4",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "hono": "^4.6.6",
@@ -30,6 +32,7 @@
     "path-to-regexp": "^8.2.0",
     "reflect-metadata": "^0.2.2",
     "sharp": "^0.33.5",
+    "swagger-jsdoc": "^6.2.8",
     "tsconfig-paths": "^4.2.0",
     "tsyringe": "^4.8.0",
     "typeorm": "^0.3.20",
@@ -47,12 +50,13 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.8.1",
+    "@types/swagger-jsdoc": "^6.0.4",
     "@types/uuid": "^10.0.0",
+    "archiver": "^7.0.1",
+    "fs-extra": "^11.2.0",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.10",
-    "typescript": "^5.6.3",
-    "archiver": "^7.0.1",
-    "fs-extra": "^11.2.0"
+    "typescript": "^5.6.3"
   },
   "_moduleAliases": {
     "@/*": "./dist/*"
