--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "migration:run": "NODE_ENV=development ts-node-dev -r dotenv/config ./node_modules/typeorm/cli.js migration:run -d ./src/infra/database/MysqlConfig.ts",
     "migration:rollback": "NODE_ENV=development ts-node-dev -r dotenv/config ./node_modules/typeorm/cli.js migration:revert -d ./src/infra/database/MysqlConfig.ts",
     "seed:generate": "ts-node-dev ./node_modules/typeorm-extension/bin/cli.cjs seed:create -n ",
-    "seed:run": "ts-node ./src/database/seeds/seeder.ts"
+    "seed:run": "ts-node ./src/database/seeds/seeder.ts",
+    "test": "jest"
   },
   "author": "josealejandror28@gmail.com",
   "license": "ISC",
@@ -48,12 +49,15 @@
     "@babel/preset-typescript": "^7.25.7",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.8.1",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/uuid": "^10.0.0",
     "archiver": "^7.0.1",
     "fs-extra": "^11.2.0",
+    "jest": "^29.7.0",
+    "jest-stare": "^2.5.2",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.10",
     "typescript": "^5.6.3"
